--- a/pyreduce/instruments/settings_pyreduce.json
+++ b/pyreduce/instruments/settings_pyreduce.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "./settings_schema.json",
+    "$schema": "settings_schema.json",
     "__instrument__": "DEFAULT",
     "reduce": {
         "base_dir": "./",
