Trying to split METIS to two instruments

--- a/pyreduce/instruments/metis_ifu/settings_METIS_IFU.json
+++ b/pyreduce/instruments/metis_ifu/settings_METIS_IFU.json
@@ -1,5 +1,5 @@
 {
-    "__instrument__": "METIS",
+    "__instrument__": "METIS_IFU",
     "flat":{
         "bias_scaling": "number_of_files",
         "plot": false
